fixes alignment on the footer's phone number

--- a/app/ContentTypes/_footer.scss
+++ b/app/ContentTypes/_footer.scss
@@ -42,10 +42,11 @@
         margin-right: 9px;
     }
 
-    p>a>span.fa.fa-phone.fa-lg {
+    span.fa.fa-phone.fa-lg {
         margin-right: 5px;
     }
 }
+
 .college-portrait {
     float: right;
 }
