--- a/home2016.css
+++ b/home2016.css
@@ -295,7 +295,7 @@ Wednesday 06, April, 2016
 
 .campus-info span.fa.fa-map-marker.fa-lg { margin-right: 9px; }
 
-.campus-info p > a > span.fa.fa-phone.fa-lg { margin-right: 5px; }
+.campus-info span.fa.fa-phone.fa-lg { margin-right: 5px; }
 
 .college-portrait { float: right; }
 
