--- a/main2016.css
+++ b/main2016.css
@@ -1780,7 +1780,7 @@ h3 {
   margin-right: 9px;
 }
 
-.campus-info p > a > span.fa.fa-phone.fa-lg {
+.campus-info span.fa.fa-phone.fa-lg {
   margin-right: 5px;
 }
 
